fix spacing

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-file/ec-component-file.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-file/ec-component-file.scss
@@ -89,8 +89,8 @@
     align-self: flex-end;
     font: $ecl-font-m;
     font-weight: $ecl-font-weight-regular;
-    margin-bottom: $ecl-spacing-m;
-    margin-top: $ecl-spacing-m;
+    margin-bottom: $ecl-spacing-m - $ecl-spacing-s;
+    margin-top: $ecl-spacing-m - $ecl-spacing-s;
 
     .no-js & {
       display: none;
